CallMD/src/objects/Programs__c.object
<CustomObject>
    <fields>
        <fullName>Access_Fee__c</fullName>
        <label>Access Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Address_Line1__c</fullName>
        <label>Address Line1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Admin_Fee__c</fullName>
        <label>Admin Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alternative_Name__c</fullName>
        <label>Alternative Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attn_To__c</fullName>
        <label>Attn To</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B2B_Consultation_Exceeded__c</fullName>
        <formula>IF(Consultations_Done_Till_Now__c&lt;=Total_No_Of_Consultations_For_B2B__c,0,ABS(Consultations_Done_Till_Now__c - Total_No_Of_Consultations_For_B2B__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>B2B Consultation  Exceeded</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bill_On_Consultations__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bill On Consultations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billable_Member__c</fullName>
        <label>Billable Member</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consultations_Done_Till_Now__c</fullName>
        <label>Consultations Done Till Now</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Consultations_Type__c</fullName>
        <label>Consultations Type</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Phone+Video</fullName>
                </value>
                <value>
                    <fullName>Phone+Chat</fullName>
                </value>
                <value>
                    <fullName>Video+Chat</fullName>
                </value>
                <value>
                    <fullName>Phone+Video+Chat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <label>Contact Person</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Yes_No__c</fullName>
        <label>Copay Yes/No</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copay__c</fullName>
        <label>Copay Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Corp_Id__c</fullName>
        <label>Corp Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days__c</fullName>
        <formula>CASE(Duration__c,&quot;One Time&quot;,30,&quot;1 Month&quot;,30,&quot;3 Months&quot;,90,&quot;6 Months&quot;,180,&quot;1 Year&quot;,365,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deactivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_content__c</fullName>
        <label>Description_content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_Not_Accept_Doctors_With_Accents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Does Not Accept Doctors With Accents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Month</fullName>
                </value>
                <value>
                    <fullName>3 Months</fullName>
                </value>
                <value>
                    <fullName>6 Months</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                </value>
                <value>
                    <fullName>Month - To - Month</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enable_Prescription_Pad__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Prescription Pad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Questions__c</fullName>
        <label>Follow Up Questions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Free_Consultations__c</fullName>
        <label>Free Consultations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fulfilment_Type__c</fullName>
        <label>Fulfilment Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fullfilment_Mailed__c</fullName>
        <label>Fullfilment Mailed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fullfilment_Record_Sent__c</fullName>
        <label>Fullfilment Record Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fullfilment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fullfilment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IT_Contact_Person__c</fullName>
        <label>IT Contact Person</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IT_Email__c</fullName>
        <label>IT Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IT_Phone__c</fullName>
        <label>IT Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Included_Consults__c</fullName>
        <label>Included Consults</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Instructions_Policies__c</fullName>
        <label>Instructions/Policies</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <label>Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Consult_Charge__c</fullName>
        <label>Member Consult Charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_in_File__c</fullName>
        <label>Name in File</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Consultations__c</fullName>
        <label>No of Consultations</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nurse_Line_Phone__c</fullName>
        <label>Nurse Line Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Parent_Program_Name__c</fullName>
        <formula>Programs__r.Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Program  Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Prefix__c</fullName>
        <label>Prefix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prescription_Discount_Program__c</fullName>
        <label>Prescription Discount Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing__c</fullName>
        <label>Pricing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_SKU__c</fullName>
        <label>Product SKU</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CallMD</fullName>
                </value>
                <value>
                    <fullName>PetMD</fullName>
                </value>
                <value>
                    <fullName>Dental MD</fullName>
                </value>
                <value>
                    <fullName>EducationMD</fullName>
                </value>
                <value>
                    <fullName>Travel MD</fullName>
                </value>
                <value>
                    <fullName>Fit MD</fullName>
                </value>
                <value>
                    <fullName>CorrectionsMD</fullName>
                </value>
                <value>
                    <fullName>HopeMD</fullName>
                </value>
                <value>
                    <fullName>PSYMD</fullName>
                </value>
                <value>
                    <fullName>SOSMD</fullName>
                </value>
                <value>
                    <fullName>DiagonosticsMD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_ID__c</fullName>
        <displayFormat>PROGID#{00000}</displayFormat>
        <label>Program ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <label>Program Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Status__c</fullName>
        <label>Program Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>D2C</fullName>
                </value>
                <value>
                    <fullName>B2B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Programs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Programs</label>
        <referenceTo>Programs__c</referenceTo>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Provider_Consult_Charge__c</fullName>
        <label>Provider Consult Charge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <formula>Providers__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Provider Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Providers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Providers</label>
        <referenceTo>Providers__c</referenceTo>
        <relationshipName>Provider</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Script_Finish__c</fullName>
        <label>Script Finish</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Script_Start__c</fullName>
        <label>Script Start</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Script__c</fullName>
        <label>Script</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Site_Url__c</fullName>
        <label>Site Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Thank_you_page_url__c</fullName>
        <label>Thank you page url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Title_content__c</fullName>
        <label>Title_content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Member_Count__c</fullName>
        <label>Total Member Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_No_Of_Consultations_For_B2B__c</fullName>
        <formula>Total_Member_Count__c  *  Utilization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total No Of Consultations For B2B</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Utilization_Exceeded__c</fullName>
        <formula>B2B_Consultation_Exceeded__c /  Total_Member_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization Exceeded %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Utilization__c</fullName>
        <label>Utilization %</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>large_image_url__c</fullName>
        <label>large_image_url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>small_image_url__c</fullName>
        <label>small_image_url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Programs / Packages</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Email__c</columns>
        <columns>End_Date__c</columns>
        <columns>Contact_Person__c</columns>
        <columns>Access_Fee__c</columns>
        <columns>Admin_Fee__c</columns>
        <columns>Program_Status__c</columns>
        <columns>Member__c</columns>
        <columns>Fax__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs / Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>